Fixed issue with navbar overlapping

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,7 +5,9 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   color: #222;
-  background: #fbfbfb; }
+  background: #fbfbfb;
+  padding-top: 45px;
+  }
 
 html, body {
   height: 100%;
